--- a/cf_battery_button_v4_0/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_0/views/stock_lot_views.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_stock_lot_form_inherit_bat100_v4_0" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v4.0</field>
+    <!-- ========================================================= -->
+    <!-- 1. Vista formulario de Lotes/Series -->
+    <!-- ========================================================= -->
+    <record id="view_stock_lot_form_inherit_bat100_v4_1" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v4.1</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
+            <!-- Añadimos los botones justo después del campo "name" -->
             <field name="name" position="after">
                 <group>
                     <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
@@ -23,8 +27,11 @@
         </field>
     </record>
 
-    <record id="view_stock_lot_tree_inherit_bat100_v4_0" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v4.0</field>
+    <!-- ========================================================= -->
+    <!-- 2. Vista lista de Lotes/Series -->
+    <!-- ========================================================= -->
+    <record id="view_stock_lot_tree_inherit_bat100_v4_1" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v4.1</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
@@ -34,10 +41,14 @@
         </field>
     </record>
 
-    <record id="view_move_line_lot_form_inherit_bat100_v4_0" model="ir.ui.view">
-        <field name="name">stock.move.line.form.inherit.bat100.v4.0</field>
+    <!-- ========================================================= -->
+    <!-- 3. Vista del wizard de movimientos de stock -->
+    <!-- ========================================================= -->
+    <record id="view_move_line_lot_form_inherit_bat100_v4_1" model="ir.ui.view">
+        <field name="name">stock.move.line.form.inherit.bat100.v4.1</field>
         <field name="model">stock.move.line</field>
-        <field name="inherit_id" ref="stock.view_move_line_lot_form"/>
+        <!-- Esta es la vista correcta en Odoo 17 -->
+        <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='lot_name']" position="after">
                 <field name="lot_id.x_bat100" string="Batería 100%" widget="boolean_toggle"/>
