--- a/cf_battery_button_v4_0/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_0/views/stock_lot_views.xml
@@ -3,12 +3,12 @@
     <!-- ========================================================= -->
     <!-- 1. Vista formulario de Lotes/Series -->
     <!-- ========================================================= -->
-    <record id="view_stock_lot_form_inherit_bat100_v4_3" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v4.3</field>
+    <record id="view_stock_lot_form_inherit_bat100_v4_4" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v4.4</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
-            <field name="name" position="after">
+            <xpath expr="//field[@name='name']" position="after">
                 <group>
                     <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
                     <button name="action_toggle_bat100"
@@ -22,15 +22,15 @@
                             class="btn-secondary"
                             invisible="not x_bat100"/>
                 </group>
-            </field>
+            </xpath>
         </field>
     </record>
 
     <!-- ========================================================= -->
     <!-- 2. Vista lista de Lotes/Series -->
     <!-- ========================================================= -->
-    <record id="view_stock_lot_tree_inherit_bat100_v4_3" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v4.3</field>
+    <record id="view_stock_lot_tree_inherit_bat100_v4_4" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v4.4</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
@@ -43,8 +43,8 @@
     <!-- ========================================================= -->
     <!-- 3. Wizard de movimientos de stock -->
     <!-- ========================================================= -->
-    <record id="view_move_line_lot_form_inherit_bat100_v4_3" model="ir.ui.view">
-        <field name="name">stock.move.line.form.inherit.bat100.v4.3</field>
+    <record id="view_move_line_lot_form_inherit_bat100_v4_4" model="ir.ui.view">
+        <field name="name">stock.move.line.form.inherit.bat100.v4.4</field>
         <field name="model">stock.move.line</field>
         <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
