--- a/cf_battery_button_v4_5/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_5/views/stock_lot_views.xml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- 1) Formulario de Lotes/Series -->
-    <record id="view_stock_lot_form_inherit_bat100_v4_6" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v4.6</field>
+    <!-- ========================================================= -->
+    <!-- 1. HERENCIA DEL FORMULARIO DE LOTES / SERIES -->
+    <!-- ========================================================= -->
+    <record id="view_stock_lot_form_inherit_bat100_v4_7" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v4.7</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
+            <!-- Añadir el campo x_bat100 debajo del nombre del lote -->
             <xpath expr="//field[@name='name']" position="after">
                 <group>
                     <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
-                    <button name="action_toggle_bat100"
-                            type="object"
-                            string="Marcar Batería 100%"
-                            class="oe_highlight"
-                            invisible="x_bat100"/>
-                    <button name="action_toggle_bat100"
-                            type="object"
-                            string="Desmarcar Batería 100%"
-                            class="btn-secondary"
-                            invisible="not x_bat100"/>
                 </group>
             </xpath>
         </field>
     </record>
 
-    <!-- 2) Lista de Lotes/Series -->
-    <record id="view_stock_lot_tree_inherit_bat100_v4_6" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v4.6</field>
-        <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_production_lot_tree"/>
+    <!-- ========================================================= -->
+    <!-- 2. HERENCIA DE LA VISTA DEL POPUP DE MOVIMIENTO DE STOCK -->
+    <!-- (Cuando se crean o asignan números de serie/lote) -->
+    <!-- ========================================================= -->
+    <record id="view_move_line_lot_form_inherit_bat100_v4_7" model="ir.ui.view">
+        <field name="name">stock.move.line.form.inherit.bat100.v4.7</field>
+        <field name="model">stock.move.line</field>
+        <!-- Heredamos el árbol editable del popup -->
+        <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='name']" position="after">
+            <!-- Insertamos el toggle justo después del número de serie/lote -->
+            <xpath expr="//field[@name='lot_name']" position="after">
                 <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
             </xpath>
         </field>
     </record>
 
-    <!-- 3) Popup de movimiento de stock -->
-    <record id="view_move_line_lot_form_inherit_bat100_v4_6" model="ir.ui.view">
-        <field name="name">stock.move.line.form.inherit.bat100.v4.6</field>
-        <field name="model">stock.move.line</field>
-        <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
+    <!-- ========================================================= -->
+    <!-- 3. OPCIONAL: AÑADIR EL CAMPO TAMBIÉN EN LA VISTA TREE DE LOTES -->
+    <!-- (Para verlo desde Inventario > Lotes / Series) -->
+    <!-- ========================================================= -->
+    <record id="view_stock_lot_tree_inherit_bat100_v4_7" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v4.7</field>
+        <field name="model">stock.lot</field>
+        <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='lot_name']" position="after">
+            <xpath expr="//field[@name='name']" position="after">
                 <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
             </xpath>
         </field>
