--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_stock_lot_form_inherit_bat100_v4_8" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v4.8</field>
+    <!-- Vista formulario de lotes -->
+    <record id="view_stock_lot_form_inherit_bat100_v5_0" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v5.0</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
-                <group>
-                    <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
-                </group>
+                <div class="oe_inline" style="margin-top:5px;">
+                    <field name="x_bat100" widget="boolean_toggle" string="Batería 100%" 
+                        options="{'size': 'small'}" class="oe_inline" style="zoom:80%;"/>
+                </div>
             </xpath>
         </field>
     </record>
 
-    <record id="view_move_line_lot_form_inherit_bat100_v4_8" model="ir.ui.view">
-        <field name="name">stock.move.line.form.inherit.bat100.v4.8</field>
-        <field name="model">stock.move.line</field>
-        <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='lot_name']" position="after">
-                <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
-            </xpath>
-        </field>
-    </record>
-
-    <record id="view_stock_lot_tree_inherit_bat100_v4_8" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v4.8</field>
+    <!-- Vista árbol de lotes -->
+    <record id="view_stock_lot_tree_inherit_bat100_v5_0" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v5.0</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
-                <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
+                <field name="x_bat100" widget="boolean_toggle" string="Batería 100%" options="{'size': 'small'}"/>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- Popup de movimientos de stock -->
+    <record id="view_move_line_lot_form_inherit_bat100_v5_0" model="ir.ui.view">
+        <field name="name">stock.move.line.form.inherit.bat100.v5.0</field>
+        <field name="model">stock.move.line</field>
+        <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='lot_name']" position="after">
+                <field name="x_bat100" widget="boolean_toggle" string="Batería 100%" options="{'size': 'small'}"/>
             </xpath>
         </field>
     </record>
