--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <!-- Vista formulario de lotes -->
-    <record id="view_stock_lot_form_inherit_bat100_v5_1" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v5.1</field>
+    <record id="view_stock_lot_form_inherit_bat100_v5_2" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v5.2</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
-                <group name="battery_group" col="2" string="Información adicional">
-                    <field name="x_bat100" widget="checkbox" string="Batería 100%"/>
-                </group>
+                <div class="oe_inline" style="margin-top:6px; margin-bottom:6px; transform: scale(0.7); transform-origin: left;">
+                    <field name="x_bat100" widget="boolean_toggle" string="Batería 100%" class="oe_inline"/>
+                </div>
             </xpath>
         </field>
     </record>
 
     <!-- Vista árbol de lotes -->
-    <record id="view_stock_lot_tree_inherit_bat100_v5_1" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v5.1</field>
+    <record id="view_stock_lot_tree_inherit_bat100_v5_2" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v5.2</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
-                <field name="x_bat100" widget="boolean_toggle" string="Batería 100%"/>
+                <field name="x_bat100" widget="boolean_toggle" string="Batería 100%" options="{'size': 'small'}"/>
             </xpath>
         </field>
     </record>
 
     <!-- Popup de movimientos de stock -->
-    <record id="view_move_line_lot_form_inherit_bat100_v5_1" model="ir.ui.view">
-        <field name="name">stock.move.line.form.inherit.bat100.v5.1</field>
+    <record id="view_move_line_lot_form_inherit_bat100_v5_2" model="ir.ui.view">
+        <field name="name">stock.move.line.form.inherit.bat100.v5.2</field>
         <field name="model">stock.move.line</field>
         <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
