--- a/cf_bateria_100/views/stock_lot_views.xml
+++ b/cf_bateria_100/views/stock_lot_views.xml
@@ -1,7 +1,6 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Añadir el toggle 'Batería 100%' en el formulario del lote -->
+    <!-- Campo "Batería 100%" dentro del formulario del lote -->
     <record id="view_stock_lot_form_bat100_inherit" model="ir.ui.view">
         <field name="name">stock.lot.form.bat100.inherit</field>
         <field name="model">stock.lot</field>
@@ -13,13 +12,13 @@
         </field>
     </record>
 
-    <!-- Añadir icono en la vista kanban de lotes (números de serie) solo si x_bat100 es True -->
+    <!-- Icono de batería en la vista kanban (solo si x_bat100 es True) -->
     <record id="view_stock_lot_kanban_bat100_inherit" model="ir.ui.view">
         <field name="name">stock.lot.kanban.bat100.inherit</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
         <field name="arch" type="xml">
-            <!-- Insertar el icono a la derecha del nombre del lote -->
+            <!-- Añadimos el icono justo a la derecha del nombre del número de serie -->
             <xpath expr="//div[contains(@class,'o_kanban_record_title')]" position="inside">
                 <t t-if="record.x_bat100.raw_value">
                     <i class="fa fa-battery-full text-success" style="margin-left:6px;" aria-label="Batería 100%"/>
