--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Vista formulario de lotes -->
+    <!-- ============================== -->
+    <!-- VISTA FORMULARIO -->
+    <!-- ============================== -->
     <record id="view_stock_lot_form_inherit_bat100_v5_4" model="ir.ui.view">
         <field name="name">stock.lot.form.inherit.bat100.v5.4</field>
         <field name="model">stock.lot</field>
@@ -18,7 +20,9 @@
         </field>
     </record>
 
-    <!-- Vista árbol de lotes -->
+    <!-- ============================== -->
+    <!-- VISTA ÁRBOL -->
+    <!-- ============================== -->
     <record id="view_stock_lot_tree_inherit_bat100_v5_4" model="ir.ui.view">
         <field name="name">stock.lot.tree.inherit.bat100.v5.4</field>
         <field name="model">stock.lot</field>
@@ -30,7 +34,9 @@
         </field>
     </record>
 
-    <!-- Popup de movimientos de stock -->
+    <!-- ============================== -->
+    <!-- POPUP DE MOVIMIENTOS DE STOCK -->
+    <!-- ============================== -->
     <record id="view_move_line_lot_form_inherit_bat100_v5_4" model="ir.ui.view">
         <field name="name">stock.move.line.form.inherit.bat100.v5.4</field>
         <field name="model">stock.move.line</field>
@@ -38,6 +44,26 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='lot_name']" position="after">
                 <field name="x_bat100" widget="boolean_toggle" string="Batería 100%" options="{'size': 'small'}"/>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- ============================== -->
+    <!-- VISTA KANBAN -->
+    <!-- ============================== -->
+    <record id="view_stock_lot_kanban_inherit_bat100_v5_4" model="ir.ui.view">
+        <field name="name">stock.lot.kanban.inherit.bat100.v5.4</field>
+        <field name="model">stock.lot</field>
+        <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
+        <field name="arch" type="xml">
+            <!-- Añadimos el icono de batería junto al nombre del número de serie -->
+            <xpath expr="//div[contains(@class,'o_kanban_record_top')]" position="inside">
+                <t t-if="record.x_bat100.raw_value">
+                    <span style="margin-left:6px; font-size:11px; background-color:#00b050; color:white;
+                                 border-radius:6px; padding:2px 5px;">
+                        🔋
+                    </span>
+                </t>
             </xpath>
         </field>
     </record>
