--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -51,13 +51,13 @@
     <!-- ============================== -->
     <!-- VISTA KANBAN (FINAL FUNCIONAL) -->
     <!-- ============================== -->
-    <record id="view_stock_lot_kanban_inherit_bat100_v5_4" model="ir.ui.view">
-        <field name="name">stock.lot.kanban.inherit.bat100.v5.4</field>
+    <record id="view_stock_lot_kanban_inherit_bat100_v5_5" model="ir.ui.view">
+        <field name="name">stock.lot.kanban.inherit.bat100.v5.5</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
         <field name="arch" type="xml">
-            <!-- Insertamos el icono 🔋 justo después del nombre del número de serie -->
-            <xpath expr="//field[@name='name']" position="after">
+            <!-- insertamos el icono 🔋 justo después del nombre en el encabezado -->
+            <xpath expr="//div[contains(@class,'o_kanban_record_headings')]" position="inside">
                 <t t-if="record.x_bat100.raw_value">
                     <span style="margin-left:6px; font-size:11px; background-color:#00b050; color:white;
                                  border-radius:6px; padding:2px 5px;"
