--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -3,8 +3,8 @@
     <!-- ============================== -->
     <!-- VISTA FORMULARIO -->
     <!-- ============================== -->
-    <record id="view_stock_lot_form_inherit_bat100_v5_6" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v5.6</field>
+    <record id="view_stock_lot_form_inherit_bat100_v5_7" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.v5.7</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
@@ -23,8 +23,8 @@
     <!-- ============================== -->
     <!-- VISTA ÁRBOL -->
     <!-- ============================== -->
-    <record id="view_stock_lot_tree_inherit_bat100_v5_6" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v5.6</field>
+    <record id="view_stock_lot_tree_inherit_bat100_v5_7" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.v5.7</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
@@ -37,8 +37,8 @@
     <!-- ============================== -->
     <!-- POPUP DE MOVIMIENTOS DE STOCK -->
     <!-- ============================== -->
-    <record id="view_move_line_lot_form_inherit_bat100_v5_6" model="ir.ui.view">
-        <field name="name">stock.move.line.form.inherit.bat100.v5.6</field>
+    <record id="view_move_line_lot_form_inherit_bat100_v5_7" model="ir.ui.view">
+        <field name="name">stock.move.line.form.inherit.bat100.v5.7</field>
         <field name="model">stock.move.line</field>
         <field name="inherit_id" ref="stock.view_stock_move_line_operation_tree"/>
         <field name="arch" type="xml">
@@ -49,15 +49,15 @@
     </record>
 
     <!-- ============================== -->
-    <!-- VISTA KANBAN DEFINITIVA -->
+    <!-- VISTA KANBAN (FUNCIONAL Y SIMPLE) -->
     <!-- ============================== -->
-    <record id="view_stock_lot_kanban_inherit_bat100_v5_6" model="ir.ui.view">
-        <field name="name">stock.lot.kanban.inherit.bat100.v5.6</field>
+    <record id="view_stock_lot_kanban_inherit_bat100_v5_7" model="ir.ui.view">
+        <field name="name">stock.lot.kanban.inherit.bat100.v5.7</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
         <field name="arch" type="xml">
-            <!-- Insertamos el icono 🔋 justo después del nombre -->
-            <xpath expr="//t[@t-field='record.name.raw_value']" position="after">
+            <!-- 🔋 Insertar después del nombre -->
+            <xpath expr="//field[@name='name']" position="after">
                 <t t-if="record.x_bat100.raw_value">
                     <span style="margin-left:6px; font-size:11px; background-color:#00b050; color:white;
                                  border-radius:6px; padding:2px 5px;"
