--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -7,7 +7,7 @@
     <record id="view_stock_lot_form_bat100" model="ir.ui.view">
         <field name="name">stock.lot.form.bat100</field>
         <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_lot_form"/>
+        <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@name='group_lot_details']" position="inside">
                 <field name="x_bat100"/>
@@ -37,8 +37,6 @@
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_kanban"/>
         <field name="arch" type="xml">
-
-            <!-- Agregamos el indicador visual -->
             <xpath expr="//div[contains(@class, 'o_kanban_record_body')]" position="inside">
                 <div t-if="record.x_bat100.value"
                      class="badge bg-success text-white"
@@ -46,7 +44,6 @@
                     🔋 Batería 100%
                 </div>
             </xpath>
-
         </field>
     </record>
 
