--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -9,9 +9,12 @@
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='group_lot_details']" position="inside">
+
+            <!-- Insertamos debajo del campo product_id (siempre existe) -->
+            <xpath expr="//field[@name='product_id']" position="after">
                 <field name="x_bat100"/>
             </xpath>
+
         </field>
     </record>
 
@@ -37,6 +40,8 @@
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_kanban"/>
         <field name="arch" type="xml">
+
+            <!-- Agregamos el indicador visual -->
             <xpath expr="//div[contains(@class, 'o_kanban_record_body')]" position="inside">
                 <div t-if="record.x_bat100.value"
                      class="badge bg-success text-white"
@@ -44,6 +49,7 @@
                     🔋 Batería 100%
                 </div>
             </xpath>
+
         </field>
     </record>
 
