--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -51,9 +51,9 @@
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[contains(@class, 'o_kanban_record_body')]" position="inside">
+            <xpath expr="//div[contains(@class, 'oe_kanban_details')]" position="inside">
                 <t t-if="record.x_bat100.raw_value">
-                    <div style="display:flex;align-items:center;gap:4px;margin-top:4px;">
+                    <div style="margin-top:4px;">
                         <span style="color:#00C853;font-weight:600;">🔋 Batería 100%</span>
                     </div>
                 </t>
